[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
python_version = "3.9"

# https://mypy.readthedocs.io/en/stable/config_file.html#disallow-dynamic-typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

# https://mypy.readthedocs.io/en/stable/config_file.html#untyped-definitions-and-calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# https://mypy.readthedocs.io/en/stable/config_file.html#none-and-optional-handling
# default: implicit_optional = false
# default: strict_optional = true

# https://mypy.readthedocs.io/en/stable/config_file.html#configuring-warnings
warn_redundant_casts = true
warn_unused_ignores = true
# default: warn_no_return = true
warn_return_any = true
warn_unreachable = true

# https://mypy.readthedocs.io/en/latest/config_file.html#miscellaneous-strictness-flags
implicit_reexport = false

# https://mypy.readthedocs.io/en/stable/config_file.html#configuring-error-messages
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.ruff.lint]
extend-select = [
	"UP",  # pyupgrade
	"B",   # flake8-bugbear
	"SIM", # flake8-simplify
	"I",   # isort
]

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
env_list =
  type, lint, py3.{11,10,9}
skip_missing_interpreters = true

[testenv]
deps =
  -r requirements/tests.txt
commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs}

[testenv:type]
skip_install = true
deps =
  -r requirements/typing.txt
commands = mypy {posargs:src tests}

[testenv:lint]
skip_install = true
deps =
  -r requirements/dev.txt
commands =
  ruff format {posargs:src tests}
  ruff check {posargs:src tests}
"""
