[metadata]
name = oil
version = 0.0.1
author = iris
author_email = iris@serv.pink
description = oil is a utility library.
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/FanFicDev/python-oil
project_urls =
	Bug Tracker = https://github.com/FanFicDev/python-oil/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
	certifi==2023.11.17
	charset-normalizer==3.3.2
	idna==3.6
	psycopg2==2.9.9
	python-dateutil==2.8.2
	requests==2.31.0
	six==1.16.0
	urllib3==2.1.0

[options.package_data]
* = py.typed

[options.packages.find]
where = src

